Changes: - Fixed the Cutoff styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,12 +15,13 @@
 }
 .inside-steps {
   text-align: left;
-  margin-left: 35%;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 .meeting-type {
   text-align: center;
-  margin: 1em 0;
+  margin: 3em 0;
 }
 
 label {
@@ -52,22 +53,29 @@ label {
 .cut-off {
   text-align: center;
   margin: 1em 0;
-  padding: 1em;
+  padding-top: 1em;
 }
 
 .cut-off label {
   margin-right: 1em;
 }
+
 .cutoff-input {
   background-color: grey;
   padding: 1em;
   border-radius: 5em;
   height: fit-content;
+
+}
+
+input[type="number"] {
   width: 12%;
   border: none;
   outline: none;
   font-size: 1.1rem;
+  /* font-weight: bold; */
   text-align: center;
+  background-color: grey;
   color: white;
 }
 
